--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
@@ -3,8 +3,8 @@
 {% block body %} 
     <a href="{{path('edificio/agregar')}}">AGREGAR</a>
     {% for edificio in edificios %}
-        <p> {{ edificio.id }} {{ edificio.nombre}} 
-            <a href="{{path('edificio',{'id':edificio.id})}}">VER</a>
+        <p>   
+            <a href="{{path('edificio',{'id':edificio.id})}}">{{ edificio.id }}</a> {{ edificio.nombre}}
             <a href="{{path('edificio/borrar',{'id':edificio.id})}}">BORRAR</a>
         </p>
     {% endfor %} 
