--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
@@ -4,7 +4,8 @@
     <a href="{{path('edificio/agregar')}}">AGREGAR</a>
     {% for edificio in edificios %}
         <p>   
-            <a href="{{path('edificio',{'id':edificio.id})}}">{{ edificio.id }}</a> {{ edificio.nombre}}
+            <a href="{{path('edificio/ver',{'id':edificio.id})}}">{{ edificio.id }}</a> {{ edificio.nombre}}
+            <a href="{{path('edificio/edit',{'id':edificio.id})}}">UPDATE</a>
             <a href="{{path('edificio/borrar',{'id':edificio.id})}}">BORRAR</a>
         </p>
     {% endfor %} 
