--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/new.html.twig
@@ -1,6 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body %} 
+    #    {{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form(form) }}
 {% endblock %}
 
