--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
@@ -7,7 +7,7 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('aula') }}">
+        <a href="{{ path('aulas') }}">
             Back to the list
         </a>
     </li>
