--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/show.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/show.html.twig
@@ -18,12 +18,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('aula') }}">
+        <a href="{{ path('aulas') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('aula_edit', { 'id': entity.id }) }}">
+        <a href="{{ path('aulas_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
