--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,16 +7,23 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         
         <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/css/bootstrap.min.css')}}" />
-        
+               
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        
+        {% block navbar %}
         {% include '::navbar.html.twig' %}
-        {% block body %}{% endblock %}
+        {% endblock %}
+        <div class="container theme-showcase" role="main">
+        
+        {% block body %} {% endblock %}
         {% block javascripts %}{% endblock %}
        
         <script src="{{ asset('bundles/untdfreservasaulas/js/jquery-2.1.4.min.js')}}"></script>
         <script src="{{ asset('bundles/untdfreservasaulas/js/bootstrap.min.js')}}"></script>
+        
+        </div>
     </body>
 </html>
