--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/index.html.twig
@@ -1,14 +1,15 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Aula list</h1>
-
-    <table class="records_list">
+    <h1>Aulas</h1>
+    <p><a class="btn btn-primary" href="{{ path('aulas_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
+    </p>    
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
-                <th>Actions</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
@@ -17,13 +18,11 @@
                 <td><a href="{{ path('aulas_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.nombre }}</td>
                 <td>
-                <ul>
-                    <li>
+                
                         <a href="{{ path('aulas_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
+                    
                         <a href="{{ path('aulas_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
+                    
                 </ul>
                 </td>
             </tr>
@@ -31,11 +30,5 @@
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('aulas_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
+        
     {% endblock %}
