--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/show.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/show.html.twig
@@ -2,31 +2,16 @@
 
 {% block body -%}
     <h1>Aula</h1>
+    <h3>Id <small>{{ entity.id }}</small></h3>
+    <h3>Nombre <small>{{ entity.nombre }}</small></h3>
+    
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Nombre</th>
-                <td>{{ entity.nombre }}</td>
-            </tr>
-        </tbody>
-    </table>
+     <fieldset class="buttons">
+        <a class="btn btn-primary" href="{{ path('aulas') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Lista</a>
+    
+        <a class="btn btn-primary" href="{{ path('aulas_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar</a>
+     </fieldset>
+        {{ form(delete_form) }}
+    
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('aulas') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('aulas_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
 {% endblock %}
