--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
@@ -1,10 +1,19 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Aula creation</h1>
+    <h1>Aula - Creación</h1>
 
-    {{ form(form) }}
-
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+        
+        <div>
+            {{ form_label(form.nombre) }}
+            {{ form_errors(form.nombre) }}
+            {{ form_widget(form.nombre) }}
+        </div>
+        
+        {{ form_end(form) }}
+    
         <ul class="record_actions">
     <li>
         <a href="{{ path('aulas') }}">
