Separar en el new de aula los forms.

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
@@ -11,6 +11,14 @@
             {{ form_errors(form.nombre) }}
             {{ form_widget(form.nombre) }}
         </div>
+        <p>----------</p>
+        <div>
+            {{ form_label(form.edificio) }}
+            {{ form_errors(form.edificio) }}
+            {{ form_widget(form.edificio) }}
+        </div>
+        <p>----------</p>
+        
         
         {{ form_end(form) }}
     
