--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -15,10 +15,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Procesos<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Administracion<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="{{path('edificios')}}">Edificios</a></li>
             <li><a href="{{path('aulas')}}">Aulas</a></li>
+            <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
           </ul>
