crud de fechaEspecial

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/show.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Fecha</th>
-                <td>{{ entity.fecha|date('Y-m-d H:i:s') }}</td>
+                <td>{{ entity.fecha|date('Y-m-d') }}</td>
             </tr>
             <tr>
                 <th>Descripcion</th>
