--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -20,6 +20,7 @@
             <li><a href="{{path('edificios')}}">Edificios</a></li>
             <li><a href="{{path('aulas')}}">Aulas</a></li>
             <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
+            <li><a href="{{path('docente')}}">Docentes</a></li>
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
           </ul>
