--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -21,8 +21,11 @@
             <li><a href="{{path('aulas')}}">Aulas</a></li>
             <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
             <li><a href="{{path('docente')}}">Docentes</a></li>
+            <li><a href="{{path('carrera')}}">Carreras</a></li>
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
+            <li class="divider"></li>
+            <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>
           </ul>
         </li>
 
