crud carrera y tipo actividad

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -23,9 +23,11 @@
             <li><a href="{{path('docente')}}">Docentes</a></li>
             <li><a href="{{path('carrera')}}">Carreras</a></li>
             <li class="divider"></li>
-            <li><a href="#">Otros</a></li>
-            <li class="divider"></li>
-            <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>
+            <li><a href="#">Otros</a>
+              <ul>
+                <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>
+              </ul>
+            </li>
           </ul>
         </li>
 
