--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/new.html.twig
@@ -3,7 +3,22 @@
 {% block body -%}
     <h1>Aula creation</h1>
 
-    {{ form(form) }}
+    
+    {{ form_start(form) }}
+	    {{ form_errors(form) }}
+        <div class="form-group">
+            {{form_label(form.nombre)}}
+            {{form_errors(form.nombre)}}
+            {{form_widget(form.nombre)}}            
+        </div> 
+        <div>
+            {{form_label(form.edificio)}}
+            {{form_errors(form.edificio)}}
+            {{form_widget(form.edificio)}}            
+        </div>
+	    
+    {{ form_end(form) }}
+
 
         <ul class="record_actions">
     <li>
