--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
@@ -1,26 +1,41 @@
 {% extends '::base.html.twig' %}
 
-{% block body %}
-        <h1>Edificios</h1>
-        <p><a class="btn btn-primary" href="{{path('edificio/agregar')}}"> <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
-        </p>
-        <table class="table table-bordered"> 
-            <thead>
-                <th>Id</th> 
+{% block body -%}
+    <h1>Edificio list</h1>
+
+    <table class="records_list">
+        <thead>
+            <tr>
+                <th>Id</th>
                 <th>Nombre</th>
-                <th>Acciones</th>
-            </thead>
-            <tbody>
-                {% for edificio in edificios %}
-                    <tr>
-                        <td><a href="{{path('edificio/ver',{'id':edificio.id})}}">{{ edificio.id }}</a></td> 
-                        <td>{{ edificio.nombre}}</td>
-                        <td><a href="{{path('edificio/edit',{'id':edificio.id})}}">VER</a> - 
-                        <a href="{{path('edificio/borrar',{'id':edificio.id})}}">BORRAR</a></td>
-                    </tr>
-                {% endfor %} 
-            </tbody>
-        </table>
-{% endblock %}
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for entity in entities %}
+            <tr>
+                <td><a href="{{ path('edificio_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td>{{ entity.nombre }}</td>
+                <td>
+                <ul>
+                    <li>
+                        <a href="{{ path('edificio_show', { 'id': entity.id }) }}">show</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('edificio_edit', { 'id': entity.id }) }}">edit</a>
+                    </li>
+                </ul>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-
+        <ul>
+        <li>
+            <a href="{{ path('edificio_new') }}">
+                Create a new entry
+            </a>
+        </li>
+    </ul>
+    {% endblock %}
