--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/show.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/show.html.twig
@@ -1,16 +1,32 @@
 {% extends '::base.html.twig' %}
 
-{% block body %} 
+{% block body -%}
     <h1>Edificio</h1>
-    <h3>Id <small>{{ edificio.id }}</small></h3>
-    <h3>Nombre <small>{{ edificio.nombre}}</small></h3>
-    
-    <fieldset class="buttons">
-        <a class="btn btn-primary" href="{{ path('edificios') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Lista</a>
-    
-        
-     </fieldset>
-       
+
+    <table class="record_properties">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ entity.id }}</td>
+            </tr>
+            <tr>
+                <th>Nombre</th>
+                <td>{{ entity.nombre }}</td>
+            </tr>
+        </tbody>
+    </table>
+
+        <ul class="record_actions">
+    <li>
+        <a href="{{ path('edificio') }}">
+            Back to the list
+        </a>
+    </li>
+    <li>
+        <a href="{{ path('edificio_edit', { 'id': entity.id }) }}">
+            Edit
+        </a>
+    </li>
+    <li>{{ form(delete_form) }}</li>
+</ul>
 {% endblock %}
-
-
