--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/edit.html.twig
@@ -3,29 +3,29 @@
 {% block body -%}
     <h1>Aula - Edición</h1>
 
-        {{ form_start(form) }}
-        {{ form_errors(form) }}
+        {{ form_start(edit_form) }}
+        {{ form_errors(edit_form) }}
         
         <div>
-            {{ form_label(form.nombre) }}
-            {{ form_errors(form.nombre) }}
-            {{ form_widget(form.nombre) }}
+            {{ form_label(edit_form.nombre) }}
+            {{ form_errors(edit_form.nombre) }}
+            {{ form_widget(edit_form.nombre) }}
         </div>
         <p>----------</p>
         <div>
-            {{ form_label(form.edificio) }}
-            {{ form_errors(form.edificio) }}
-            {{ form_widget(form.edificio) }}
+            {{ form_label(edit_form.edificio) }}
+            {{ form_errors(edit_form.edificio) }}
+            {{ form_widget(edit_form.edificio) }}
         </div>
         <p>----------</p>
         
         
-        {{ form_end(form) }}
+        {{ form_end(edit_form) }}
 
         <ul class="record_actions">
     <li>
         <a href="{{ path('aulas') }}">
-            Back to the list
+            Volver a la lista
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
