--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/edit.html.twig
@@ -1,14 +1,23 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Carrera edit</h1>
+    <h1>Carrera - Edición</h1>
 
-    {{ form(edit_form) }}
+    {{ form_start(edit_form) }}
+    {{ form_errors(edit_form) }}
 
-        <ul class="record_actions">
+    <div>
+        {{ form_label(edit_form.nombre) }}
+        {{ form_errors(edit_form.nombre) }}
+        {{ form_widget(edit_form.nombre) }}
+    </div>
+                
+    {{ form_end(edit_form) }}
+
+    <ul class="record_actions">    
     <li>
         <a href="{{ path('carrera') }}">
-            Back to the list
+            Volver a la lista
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
