--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/edit.html.twig
@@ -1,14 +1,30 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Docente edit</h1>
+    <h1>Docente - Edición</h1>
 
-    {{ form(edit_form) }}
+    {{ form_start(edit_form) }}
+        {{ form_errors(edit_form) }}
+        
+        <div>
+            {{ form_label(edit_form.nombre) }}
+            {{ form_errors(edit_form.nombre) }}
+            {{ form_widget(edit_form.nombre) }}
+        </div>
+        <p>----------</p>
+        <div>
+            {{ form_label(edit_form.dni) }}
+            {{ form_errors(edit_form.dni) }}
+            {{ form_widget(edit_form.dni) }}
+        </div>
+        <p>----------</p>
+        
+        
+        {{ form_end(edit_form) }}
 
-        <ul class="record_actions">
     <li>
         <a href="{{ path('docente') }}">
-            Back to the list
+            Volver a la lista
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
