--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/edit.html.twig
@@ -1,14 +1,30 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>FechaEspecial edit</h1>
+    <h1>FechaEspecial - Edición</h1>
 
-    {{ form(edit_form) }}
+    {{ form_start(edit_form) }}
+        {{ form_errors(edit_form) }}
+        
+        <div>
+            {{ form_label(edit_form.fecha) }}
+            {{ form_errors(edit_form.fecha) }}
+            {{ form_widget(edit_form.fecha) }}
+        </div>
+        <p>----------</p>
+        <div>
+            {{ form_label(edit_form.descripcion) }}
+            {{ form_errors(edit_form.descripcion) }}
+            {{ form_widget(edit_form.descripcion) }}
+        </div>
+        <p>----------</p>
+        
+        
+        {{ form_end(edit_form) }}
 
-        <ul class="record_actions">
     <li>
         <a href="{{ path('fechaespecial') }}">
-            Back to the list
+            Volver a la lista
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
