--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -20,7 +20,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Administracion<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{path('edificios')}}">Edificios</a></li>
+            <li><a href="{{path('edificio')}}">Edificios</a></li>
             <li><a href="{{path('aulas')}}">Aulas</a></li>
             <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
             <li><a href="{{path('docente')}}">Docentes</a></li>
