--- a/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/index.html.twig
@@ -1,12 +1,13 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>TipoActividad list</h1>
-
-    <table class="records_list">
+    <h1>Tipos de Actividad</h1>
+    <p><a class="btn btn-primary" href="{{ path('tipoactividad_new') }}">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR
+        </a></p>  
+    <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
                 <th>Cantidadhoras</th>
                 <th>Actions</th>
@@ -15,29 +16,13 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('tipoactividad_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.nombre }}</td>
+                <td><a href="{{ path('tipoactividad_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
                 <td>{{ entity.cantidadHoras }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('tipoactividad_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('tipoactividad_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                <td><a href="{{ path('tipoactividad_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('tipoactividad_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
