--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/index.html.twig
@@ -2,12 +2,12 @@
 
 {% block body -%}
     <h1>Aulas</h1>
-    <p><a class="btn btn-primary" href="{{ path('aulas_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
-    </p>    
+    <p><a class="btn btn-primary" href="{{ path('aulas_new') }}">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR
+        </a></p>    
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
                 <th>Acciones</th>
             </tr>
@@ -15,11 +15,10 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('aulas_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.nombre }}</td>
-                <td>                
-                    <a href="{{ path('aulas_show', { 'id': entity.id }) }}">VER</a> - 
-                    <a href="{{ path('aulas_edit', { 'id': entity.id }) }}">BORRAR</a>
+                <td><a href="{{ path('aulas_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
+                <td>
+                
+                    <a href="{{ path('aulas_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </ul>
                 </td>
             </tr>
