--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/index.html.twig
@@ -1,41 +1,26 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Carrera list</h1>
-
-    <table class="records_list">
+    <h1>Carrera</h1>
+    <p><a class="btn btn-primary" href="{{ path('carrera_new') }}">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR
+        </a></p>  
+    <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
-                <th>Actions</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('carrera_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.nombre }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('carrera_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('carrera_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                <td><a href="{{ path('carrera_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
+                <td><a href="{{ path('carrera_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('carrera_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
