--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/index.html.twig
@@ -7,21 +7,17 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
                 <th>Dni</th>
-                <th>Actions</th>
+                <th>Accciones</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('docente_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.nombre }}</td>
+                <td><a href="{{ path('docente_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
                 <td>{{ entity.dni }}</td>
-                <td>
-                    <a href="{{ path('docente_show', { 'id': entity.id }) }}">VER</a> - 
-                    <a href="{{ path('docente_edit', { 'id': entity.id }) }}">BORRAR</a>
+                <td><a href="{{ path('docente_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </td>
             </tr>
         {% endfor %}
