--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
@@ -1,41 +1,26 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Edificio list</h1>
-
-    <table class="records_list">
+    <h1>Edificio</h1>
+    <p><a class="btn btn-primary" href="{{ path('edificio_new') }}">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Agregar
+        </a></p>
+    <table class="table table-bordered" >
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('edificio_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.nombre }}</td>
+            <tr>               
+                <td><a href="{{ path('edificio_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('edificio_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('edificio_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                   <a href="{{ path('edificio_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('edificio_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
