--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/index.html.twig
@@ -8,6 +8,7 @@
     <table class="table table-bordered">
         <thead>
             <tr>
+                <th>Edificio</th>
                 <th>Nombre</th>
                 <th>Acciones</th>
             </tr>
@@ -15,6 +16,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
+                <td><a href="{{ path('edificio_show', { 'id': entity.edificio.id }) }}">{{ entity.edificio }}</a></td>
                 <td><a href="{{ path('aulas_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
                 <td>
                 
