--- a/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
@@ -1,7 +1,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
             {{ form_widget(form) }}
             <div>
@@ -9,4 +9,5 @@
             </div>
         </form>
     </div>
+    <div class="visible-lg col-lg-2">prueba...</div>
 </div>
