Cambio de theme de bootstrap

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,12 @@
 
         <title>{% block title %}Principal{% endblock %}</title>
         
+{#
         <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/css/bootstrap.min.css')}}" />
+#}
+
+
+        <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/css/bootstrap-journal.min.css')}}" />
                
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
