--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -25,7 +25,7 @@
             <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
             <li><a href="{{path('docente')}}">Docentes</a></li>
             <li><a href="{{path('carrera')}}">Carreras</a></li>
-            <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>
+            <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>            
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
           </ul>
@@ -43,7 +43,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Hola, {{ app.user.username }}<span class="caret"></span></a>       
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ app.user.username }}<span class="caret"></span></a>       
           <ul class="dropdown-menu" role="Usuario">
             <li><a href="{{ path('fos_user_change_password')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Cambiar password</a></li>
             <li><a href="{{ path('fos_user_security_logout')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Salir</a></li>
