--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Actividad/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Actividad/edit.html.twig
@@ -1,16 +1,27 @@
 {% extends '::base.html.twig' %}
 
+{% block stylesheets -%}
+    <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/js/vendor/select2/css/select2.min.css')}}" />
+{% endblock %}
+
 {% block body -%}
     <h1>Actividad edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('actividad') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <ul class="record_actions">
+        <li>
+            <a href="{{ path('actividad') }}">
+                Back to the list
+            </a>
+        </li>
+        <li>{{ form(delete_form) }}</li>
+    </ul>
+{% endblock %}
+
+{% block javascripts -%}
+    <script src="{{ asset('bundles/untdfreservasaulas/js/vendor/select2/js/select2.min.js')}}"></script>
+    <script type="text/javascript">
+      //  $('select').select2();
+    </script>
 {% endblock %}
