--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/edit.html.twig
@@ -3,31 +3,37 @@
 {% block body -%}
     <h1>Aula - Edición</h1>
 
-        {{ form_start(edit_form) }}
-        {{ form_errors(edit_form) }}
-        
-        <div>
-            {{ form_label(edit_form.nombre) }}
-            {{ form_errors(edit_form.nombre) }}
-            {{ form_widget(edit_form.nombre) }}
-        </div>
-        <p>----------</p>
-        <div>
-            {{ form_label(edit_form.edificio) }}
-            {{ form_errors(edit_form.edificio) }}
-            {{ form_widget(edit_form.edificio) }}
-        </div>
-        <p>----------</p>
-        
-        
-        {{ form_end(edit_form) }}
+    {{ form_start(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('aulas') }}">
-            Volver a la lista
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        {{ form_errors(edit_form) }}
+    </div>
+
+    <div>
+        {{ form_label(edit_form.nombre) }}
+        {{ form_errors(edit_form.nombre) }}
+        {{ form_widget(edit_form.nombre) }}
+    </div>
+    <p>----------</p>
+    <div>
+        {{ form_label(edit_form.edificio) }}
+        {{ form_errors(edit_form.edificio) }}
+        {{ form_widget(edit_form.edificio) }}
+    </div>
+    <p>----------</p>
+
+
+    {{ form_end(edit_form) }}
+
+    <ul class="record_actions">
+        <li>
+            <a href="{{ path('aulas') }}">
+                Volver a la lista
+            </a>
+        </li>
+        <li>{{ form(delete_form) }}</li>
+    </ul>
 {% endblock %}
