Recursos / form y posicion en la navbar Reservas / form de prueba

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -26,8 +26,11 @@
             <li><a href="{{path('docente')}}">Docentes</a></li>
             <li><a href="{{path('carrera')}}">Carreras</a></li>
             <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>            
+            <li><a href="{{path('recurso')}}">Recursos</a></li>            
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
+            <li class="divider"></li>
+            <li><a href="{{path('reserva')}}">Reservas - Prueba</a></li>            
           </ul>
         </li>
 
