Se activan mas menues en el navbar Se corrige el controlador de Reserva y el typo para lograr la carga de los recursos.

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -20,13 +20,17 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Administracion<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
+              
             <li><a href="{{path('edificio')}}">Edificios</a></li>
             <li><a href="{{path('aulas')}}">Aulas</a></li>
-            <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
-            <li><a href="{{path('docente')}}">Docentes</a></li>
-            <li><a href="{{path('carrera')}}">Carreras</a></li>
-            <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>            
             <li><a href="{{path('recurso')}}">Recursos</a></li>            
+            <li><a href="{{path('docente')}}">Docentes</a></li>
+            <li><a href="{{path('curso')}}">Cursos</a></li>
+            <li><a href="{{path('carrera')}}">Carreras</a></li>
+            <li><a href="{{path('actividad')}}">Actividades</a></li>            
+            <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>            
+            <li class="divider"></li>
+            <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
             <li class="divider"></li>
