--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Actividad/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Actividad/index.html.twig
@@ -6,7 +6,6 @@
     <table class="records_list">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
                 <th>Actions</th>
             </tr>
@@ -14,12 +13,11 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('actividad_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.nombre }}</td>
+                <td><a href="{{ path('actividad_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
                 <td>
                 <ul>
                     <li>
-                        <a href="{{ path('actividad_show', { 'id': entity.id }) }}">show</a>
+                        <a href="{{ path('actividad_show', { 'id': entity.id  }) }}">show</a>
                     </li>
                     <li>
                         <a href="{{ path('actividad_edit', { 'id': entity.id }) }}">edit</a>
